<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant">

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_index"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:paddingStart="9dp"
        android:paddingEnd="9dp"
        android:gravity="center"
        android:layout_marginTop="9dp"
        android:text="@string/index"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="45sp"
        android:textStyle="bold"
        android:fontFamily="@font/inria_serif_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"/>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/inria_serif_light"
        android:layout_marginTop="9dp"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toEndOf="@+id/text_index"
        app:layout_constraintTop_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/description" />

    <TextView
        android:id="@+id/text_pollutant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="13sp"
        android:fontFamily="@font/inria_serif_light"
        app:layout_constraintStart_toEndOf="@+id/text_index"
        app:layout_constraintTop_toBottomOf="@+id/text_description"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/pollutant_type" />

    <TextView
        android:id="@+id/text_concentration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inria_serif_light"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_index"
        app:layout_constraintTop_toBottomOf="@+id/text_pollutant"
        tools:text="@string/concentration" />

</androidx.constraintlayout.widget.ConstraintLayout>