<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/profile_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inria_serif_light"
        tools:text="Hello, User!"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/userNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/setting"
        android:contentDescription="@string/settings"
        app:tint="@color/white"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="@id/profileImageView"
        app:layout_constraintEnd_toEndOf="@id/profileImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
