<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.myapplication.ui.welcome.SplashFragment"
        android:label="SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.myapplication.ui.welcome.WelcomeFragment"
        android:label="Welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.myapplication.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/signupFragment"
        android:name="com.example.myapplication.ui.signup.SignupFragment"
        android:label="Signup"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_signupFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>

    <fragment
        android:id="@+id/userFragment"
        android:name="com.example.myapplication.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.myapplication.ui.setting.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
</navigation>